texy. - úprava textu

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -254,25 +254,33 @@
             </div>
           </div>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <img src="/images/lektori/jiri-penzes.png" alt="[fotografie] Jiří Penzeš">
-        </div>
-        <div class="lectors-box mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <p><b>Lektor - Jiří Pénzeš</b></p>
-          <p>Vývoji software se věnuji téměř deset let. Za tu dobu jsem měl možnost nahlédnout pod pokličku různě
-            velikým projektům a vidět jak fungují různě veliké týmy. Vždy jsem měl slabost pro čistý kód a doržování
-            určitých praktik, aby se zlepšovala code base.
-          </p>
-          <p>Baví mě sdílet znalosti a pracovat s komunitou. Společně s kamarády organizujeme již několik let Global
-            day of CodeRetreat a mimo nich jsem facilitoval i lokální, kde se snažíme propagovat čistý kód a dobré
-            praktiky psaní kódu. Zkouším v česku šířit koncept Coding Dojo, který pomáhá sdílet znalosti a zkoušet
-            různé cesty na poli vývoje.
-          </p>
-          <p>
-            V případě zájmu je možné postavit i školení na míru, dle vašich potřeb. Vše lze přizpůsobit, aby to co
-            nejlépe zapadlo na vaše potřeby. Mimo školení je možné se domluvit i na individuálních konzultacích.
-          </p>
-          <a class="mail" href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a>
+        <div
+          class="lectors-box mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-12-desktop">
+          <div class="mdc-layout-grid__inner">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+              <img src="/images/lektori/jiri-penzes.png" alt="[fotografie] Jiří Penzeš">
+            </div>
+            <div
+              class="lectors-box_text
+         mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+              <p><b>Lektor - Jiří Pénzeš</b></p>
+              <p>Vývoji software se věnuji téměř deset let. Za tu dobu jsem měl možnost
+                nahlédnout pod pokličku různě velikým projektům a vidět jak fungují
+                různě veliké týmy. Vždy jsem měl slabost pro čistý kód a doržování
+                určitých praktik, aby se zlepšovala code&nbsp;base.</p>
+              <p>Baví mě sdílet znalosti a pracovat s&nbsp;komunitou. Společně s&nbsp;kamarády
+                organizujeme již několik let Global day of CodeRetreat a mimo nich jsem
+                facilitoval i&nbsp;lokální, kde se snažíme propagovat čistý kód a dobré
+                praktiky psaní kódu. Zkouším v&nbsp;česku šířit koncept Coding Dojo, který
+                pomáhá sdílet znalosti a zkoušet různé cesty na poli vývoje.</p>
+              <p>V&nbsp;případě zájmu je možné postavit i&nbsp;školení na míru, dle vašich
+                potřeb. Vše lze přizpůsobit, aby to co nejlépe zapadlo na vaše potřeby.
+                Mimo školení je možné se domluvit i&nbsp;na individuálních konzultacích.</p>
+              <a class="mail"
+                 href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a>
+            </div>
+          </div>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
@@ -288,45 +296,39 @@
   </section>
 
 
-
-
   <section id="galerie" class="gallery">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Fotogalerie</h2>
-          <p class="description">Fotky pořízeny z prvního a druhého kurzu pro děti</p>
-          <div class="gallery__photos mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-1.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-2.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-3.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-4.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-5.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-6.png" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-7.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-8.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-            <div class="mdc-layout-grid__cell">
-              <img src="/images/galerie/foto-9.jpg" alt="Fotografie z průběhu kurzu" width="300">
-            </div>
-          </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+          <img src="/images/galerie/foto-1.jpg" alt="Fotografie z průběhu kurzu">
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+          <img src="/images/galerie/foto-2.jpg" alt="Fotografie z průběhu kurzu">
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+          <img src="/images/galerie/foto-3.jpg" alt="Fotografie z průběhu kurzu">
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <img src="/images/galerie/foto-4.jpg" alt="Fotografie z průběhu kurzu">
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <img src="/images/galerie/foto-5.jpg" alt="Fotografie z průběhu kurzu">
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <img src="/images/galerie/foto-6.png" alt="Fotografie z průběhu kurzu" width="482">
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <img src="/images/galerie/foto-7.jpg" alt="Fotografie z průběhu kurzu" width="482">
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <img src="/images/galerie/foto-8.jpg" alt="Fotografie z průběhu kurzu" width="482">
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <img src="/images/galerie/foto-9.jpg" alt="Fotografie z průběhu kurzu" width="482">
         </div>
       </div>
+    </div>
+    </div>
     </div>
   </section>
   <section id="reference" class="opinions">
