--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -331,6 +331,18 @@
     </div>
     </div>
   </section>
+  <section id="cena" class="price">
+    <div class="mdc-layout-grid wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Cena celého kurzu</h2>
+          <p>Kurz obsahuje 4 lekce ve 4 týdnech po 1.5 hodině</p>
+          <p>Cena se odvíjí od počtu dětí a lokace. Čekejte od nás neodolatelnou nabídku.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="reference" class="opinions">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
@@ -425,17 +437,6 @@
 
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="cena" class="price">
-    <div class="mdc-layout-grid wrapper">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Cena kurzu</h2>
-          <p>Kurz obsahuje 4 lekce ve 4 týdnech po 1.5 hodině</p>
-          <p>Cena se odvíjí od počtu dětí a lokace. Čekejte od nás neodolatelnou nabídku.</p>
         </div>
       </div>
     </div>
