prodeti. Sekce: Kontakt

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -452,57 +452,57 @@
             <a href="tel:732364404">+420 732 364 404</a>
           </div>
         </div>
+      </div>
 
-        <div class="contact_line mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <hr>
-        </div>
-
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
-          <h3>O nás</h3>
-          <p>V rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše děti. Na základě spokojenosti
-            dětí i rodičů
-            s již uspořádanými kurzy, jsme se rozhodli nabízet Programování pro děti přímo do firem.</p>
-          <p>Využijte této možnosti například jako zajímavý benefit pro své zaměstnance.</p>
-        </div>
-        <div class="navigation mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <h3>Navigace</h3>
-          <ul>
-            <li>
-              <a href="#uvod">Úvod</a>
-            </li>
-            <li>
-              <a href="#co-ucime">Co učíme</a>
-            </li>
-            <li>
-              <a href="#ukazky">Ukázky</a>
-            </li>
-            <li>
-              <a href="#galerie">Fotogalerie</a>
-            </li>
-            <li>
-              <a href="#reference">Říkají o nás</a>
-            </li>
-            <li>
-              <a href="#kontakt">Kontakt</a>
-            </li>
-          </ul>
-        </div>
-        <div class="contact_details mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-          <h3>Kontakt</h3>
-          <p>TopMonks, s.r.o.</p>
-          <p>Struhařovská 2931/9</p>
-          <p>141 00 Praha 4</p>
-          <p>Czech Republic</p>
-          <p>+420 226 257 521</p>
-          <p>
-            <a class="contact_us" href="mailto:info@topmonks.com">info@topmonks.com</a>
-          </p>
-          <p>
-            <a href="https://www.topmonks.com/">www.topmonks.com</a>
-          </p>
+        <div class="about_us mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
+              <h3>O nás</h3>
+              <p>V rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše děti. Na základě spokojenosti
+                dětí i rodičů
+                s již uspořádanými kurzy, jsme se rozhodli nabízet Programování pro děti přímo do firem.</p>
+              <p>Využijte této možnosti například jako zajímavý benefit pro své zaměstnance.</p>
+            </div>
+            <div class="navigation mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <h3>Navigace</h3>
+              <ul>
+                <li>
+                  <a href="#uvod">Úvod</a>
+                </li>
+                <li>
+                  <a href="#co-ucime">Co učíme</a>
+                </li>
+                <li>
+                  <a href="#ukazky">Ukázky</a>
+                </li>
+                <li>
+                  <a href="#galerie">Fotogalerie</a>
+                </li>
+                <li>
+                  <a href="#reference">Říkají o nás</a>
+                </li>
+                <li>
+                  <a href="#kontakt">Kontakt</a>
+                </li>
+              </ul>
+            </div>
+            <div class="contact_details mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+              <h3>Kontakt</h3>
+              <p>TopMonks, s.r.o.</p>
+              <p>Struhařovská 2931/9</p>
+              <p>141 00 Praha 4</p>
+              <p>Czech Republic</p>
+              <p>+420 226 257 521</p>
+              <p>
+                <a class="contact_us" href="mailto:info@topmonks.com">info@topmonks.com</a>
+              </p>
+              <p>
+                <a href="https://www.topmonks.com/">www.topmonks.com</a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
   </section>
 </main>
 <footer id="social" class="social">
