fixing broken img link

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -285,7 +285,7 @@
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <div class="photo">
-            <img src="/images/machy.jpg" alt="[fotografie] Jan Macháček">
+            <img src="/images/lektori/machy.jpg" alt="[fotografie] Jan Macháček">
           </div>
           <a class="mail" href="mailto:jan.machacek@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jan.machacek@topmonks.com</a>
         </div>
