--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -235,67 +235,6 @@
       </div>
     </div>
   </section>
-
-  <section class="teachers">
-    <div class="mdc-layout-grid wrapper">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Naši Lektoři</h2>
-        </div>
-        <div class="lectors mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <div class="mdc-layout-grid__inner">
-            <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-              <button class="lectors_jiri">JIŘÍ PÉNZEŠ</button>
-            </div>
-            <div
-              class="lectors_jan mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-              <button class="lectors_jan">JAN MACHÁČEK</button>
-            </div>
-          </div>
-        </div>
-        <div
-          class="lectors-box mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-12-desktop">
-          <div class="mdc-layout-grid__inner">
-            <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-              <img src="/images/lektori/jiri-penzes.png" alt="[fotografie] Jiří Penzeš">
-            </div>
-            <div
-              class="lectors-box_text
-         mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-              <p><b>Lektor - Jiří Pénzeš</b></p>
-              <p>Vývoji software se věnuji téměř deset let. Za tu dobu jsem měl možnost
-                nahlédnout pod pokličku různě velikým projektům a vidět jak fungují
-                různě veliké týmy. Vždy jsem měl slabost pro čistý kód a doržování
-                určitých praktik, aby se zlepšovala code&nbsp;base.</p>
-              <p>Baví mě sdílet znalosti a pracovat s&nbsp;komunitou. Společně s&nbsp;kamarády
-                organizujeme již několik let Global day of CodeRetreat a mimo nich jsem
-                facilitoval i&nbsp;lokální, kde se snažíme propagovat čistý kód a dobré
-                praktiky psaní kódu. Zkouším v&nbsp;česku šířit koncept Coding Dojo, který
-                pomáhá sdílet znalosti a zkoušet různé cesty na poli vývoje.</p>
-              <p>V&nbsp;případě zájmu je možné postavit i&nbsp;školení na míru, dle vašich
-                potřeb. Vše lze přizpůsobit, aby to co nejlépe zapadlo na vaše potřeby.
-                Mimo školení je možné se domluvit i&nbsp;na individuálních konzultacích.</p>
-              <a class="mail"
-                 href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-          <div class="photo">
-            <img src="/images/machy.jpg" alt="[fotografie] Jan Macháček">
-          </div>
-          <a class="mail" href="mailto:jan.machacek@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jan.machacek@topmonks.com</a>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
-        </div>
-      </div>
-    </div>
-  </section>
-
-
   <section id="galerie" class="gallery">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
@@ -331,13 +270,23 @@
     </div>
     </div>
   </section>
+
   <section id="cena" class="price">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
           <h2>Cena celého kurzu</h2>
-          <p>Kurz obsahuje 4 lekce ve 4 týdnech po 1.5 hodině</p>
-          <p>Cena se odvíjí od počtu dětí a lokace. Čekejte od nás neodolatelnou nabídku.</p>
+        </div>
+        <div class="price_table mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
+          <div class="table_head">
+          <h3>Cena zahrnuje</h3>
+          </div>
+          <div class="table_body">
+          <p>4 lekce</p>
+          <p>jedna lekce = 90 min</p>
+          <p>kapacita = 10 dětí</p>
+          <a href="#kontakt" class="button">MÁM ZÁJEM O KURZ</a>
+          </div>
         </div>
       </div>
     </div>
@@ -454,55 +403,55 @@
         </div>
       </div>
 
-        <div class="about_us mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
-          <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
-              <h3>O nás</h3>
-              <p>V rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše děti. Na základě spokojenosti
-                dětí i rodičů
-                s již uspořádanými kurzy, jsme se rozhodli nabízet Programování pro děti přímo do firem.</p>
-              <p>Využijte této možnosti například jako zajímavý benefit pro své zaměstnance.</p>
-            </div>
-            <div class="navigation mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <h3>Navigace</h3>
-              <ul>
-                <li>
-                  <a href="#uvod">Úvod</a>
-                </li>
-                <li>
-                  <a href="#co-ucime">Co učíme</a>
-                </li>
-                <li>
-                  <a href="#ukazky">Ukázky</a>
-                </li>
-                <li>
-                  <a href="#galerie">Fotogalerie</a>
-                </li>
-                <li>
-                  <a href="#reference">Říkají o nás</a>
-                </li>
-                <li>
-                  <a href="#kontakt">Kontakt</a>
-                </li>
-              </ul>
-            </div>
-            <div class="contact_details mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-              <h3>Kontakt</h3>
-              <p>TopMonks, s.r.o.</p>
-              <p>Struhařovská 2931/9</p>
-              <p>141 00 Praha 4</p>
-              <p>Czech Republic</p>
-              <p>+420 226 257 521</p>
-              <p>
-                <a class="contact_us" href="mailto:info@topmonks.com">info@topmonks.com</a>
-              </p>
-              <p>
-                <a href="https://www.topmonks.com/">www.topmonks.com</a>
-              </p>
-            </div>
+      <div class="about_us mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
+            <h3>O nás</h3>
+            <p>V rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše děti. Na základě spokojenosti
+              dětí i rodičů
+              s již uspořádanými kurzy, jsme se rozhodli nabízet Programování pro děti přímo do firem.</p>
+            <p>Využijte této možnosti například jako zajímavý benefit pro své zaměstnance.</p>
+          </div>
+          <div class="navigation mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <h3>Navigace</h3>
+            <ul>
+              <li>
+                <a href="#uvod">Úvod</a>
+              </li>
+              <li>
+                <a href="#co-ucime">Co učíme</a>
+              </li>
+              <li>
+                <a href="#ukazky">Ukázky</a>
+              </li>
+              <li>
+                <a href="#galerie">Fotogalerie</a>
+              </li>
+              <li>
+                <a href="#reference">Říkají o nás</a>
+              </li>
+              <li>
+                <a href="#kontakt">Kontakt</a>
+              </li>
+            </ul>
+          </div>
+          <div class="contact_details mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+            <h3>Kontakt</h3>
+            <p>TopMonks, s.r.o.</p>
+            <p>Struhařovská 2931/9</p>
+            <p>141 00 Praha 4</p>
+            <p>Czech Republic</p>
+            <p>+420 226 257 521</p>
+            <p>
+              <a class="contact_us" href="mailto:info@topmonks.com">info@topmonks.com</a>
+            </p>
+            <p>
+              <a href="https://www.topmonks.com/">www.topmonks.com</a>
+            </p>
           </div>
         </div>
       </div>
+    </div>
   </section>
 </main>
 <footer id="social" class="social">
