--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -2,54 +2,10 @@
 {%- import 'macros/helpers.html' as macros -%}
 {% block title %} About Us - TopMonks{% endblock %}
 {% block head %}
-<style>
-  .tm-team__members--collapsed .tm-team__member,
-  .tm-team__members--collapsed .show-less,
-  .show-more {
-    display: none;
-  }
-  .tm-team__members--collapsed .show-more {
-    display: inline-block;
-  }
-  .tm-team__members .action-button{
-    margin-top: 2em;
-  }
-  .tm-team__member {
-    display: flex;
-    align-items: center;
-  }
-  .tm-team__member.box.tm-team__member--hero {
-    display: block;
-    padding: 0;
-    text-align: center;
-  }
-  .tm-team__member img {
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    margin: 0;
-  }
-  .tm-team__member.tm-team__member--hero img {
-    position: static;
-    width: 100%;
-    height: auto;
-    border-radius: 20px 20px 0 0;
-  }
-  .tm-team__member .content {
-    padding-left: 20px;
-  }
-  .tm-team__member.tm-team__member--hero .content {
-    padding: 20px;
-  }
-  .tm-team__member strong {
-    display: block;
-  }
-</style>
-
+<link rel="stylesheet" href="/stylesheets/about-us.css">
 {% endblock %}
 
 {% block content %}
-
   <section id="how-we-work" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-page-header">
@@ -93,7 +49,8 @@
     </div>
   </section>
 
-  <section id="team" class="tm-team mdc-layout-grid">
+  <section class="tm-team">
+    <div id="team" class="tm-bgnd-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Our Team</h2>
@@ -119,6 +76,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
