prodeti. Index.html

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -91,10 +91,7 @@
         <a href="#uvod">Úvod</a>
       </li>
       <li>
-        <a href="#co-ucime">Co učíme</a>
-      </li>
-      <li>
-        <a href="#ukazky">Ukázky</a>
+        <a href="#courses">Co učíme</a>
       </li>
       <li>
         <a href="#galerie">Fotogalerie</a>
@@ -132,17 +129,17 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div
-          class="basic-info_box basic-info_box_icons basic-info_box_age mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+          class="basic-info_box basic-info_box_icons basic-info_box_age mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h2>7&ndash;12 let</h2>
           <p>pořádáme kurzy pro děti</p>
         </div>
         <div
-          class="basic-info_box basic-info_box_icons basic-info_box_calendar mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+          class="basic-info_box basic-info_box_icons basic-info_box_calendar mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h2>4&nbsp;týdny</h2>
           <p>celý kurz trvá 4&nbsp;týdny</p>
         </div>
         <div
-          class="basic-info_box basic-info_box_icons basic-info_box_capacity mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+          class="basic-info_box basic-info_box_icons basic-info_box_capacity mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h2>10&nbsp;dětí</h2>
           <p>kapacita</p>
         </div>
@@ -156,9 +153,9 @@
           <h2>Co naučíme vaše děti?</h2>
         </div>
         <div
-          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>1.&nbsp;Tvoříme hru I</h3>
           <h4>Základy</h4>
           <p>První lekce se věnuje zejména úvodu do světa programování a základům
@@ -166,9 +163,9 @@
             programovat funkční a zábavnou počítačovou&nbsp;hru.</p>
         </div>
         <div
-          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>2. Tvoříme hru II</h3>
           <h4>Hours of Code</h4>
           <p>Druhá lekce navazuje na první a pokračujeme v&nbsp;tvorbě her. Přidáváme
@@ -177,9 +174,9 @@
         </div>
 
         <div
-          class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>3. Robot Edison I</h3>
           <h4>Úvod</h4>
           <p>Pomocí robota Edison si děti vyzkouší z&nbsp;virtuálního světa ovládat
@@ -188,9 +185,9 @@
         </div>
 
         <div
-          class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-desktop">
+          class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3>4. Robot Edison II</h3>
           <h4>Pokročilé</h4>
           <p>V&nbsp;posledním kurzu se děti učí další možnosti ovládání robota a
@@ -203,9 +200,8 @@
   <section id="ukazka" class="video">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-12-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
           <h2>Jak se programuje pro děti</h2>
-          <img src="/images/video_ukazka.jpg">
         </div>
       </div>
     </div>
@@ -222,12 +218,12 @@
                 action="https://topmonks.us12.list-manage.com/subscribe/post?u=3a1d5081e16aac38b8d212eac&amp;id=3dfcb7600a"
                 method="post" target="_blank">
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-7-desktop">
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-7-desktop">
               <label><span class="a11y--hidden">Zadejte váši e-mailovou adresu:</span> <input type="email" name="EMAIL"
                                                                                               placeholder="vas@email.cz"></label>
             </div>
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-desktop">
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
               <button>ODESLAT</button>
             </div>
           </form>
@@ -236,34 +232,25 @@
     </div>
   </section>
   <section id="galerie" class="gallery">
-    <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/galerie/foto-1.jpg" alt="Fotografie z průběhu kurzu">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/galerie/foto-2.jpg" alt="Fotografie z průběhu kurzu">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/galerie/foto-3.jpg" alt="Fotografie z průběhu kurzu">
         </div>
-        <div class="mdc-layout-grid__cell">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/galerie/foto-4.jpg" alt="Fotografie z průběhu kurzu">
         </div>
-        <div class="mdc-layout-grid__cell">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <img src="/images/galerie/foto-5.jpg" alt="Fotografie z průběhu kurzu">
         </div>
-        <div class="mdc-layout-grid__cell">
-          <img src="/images/galerie/foto-6.png" alt="Fotografie z průběhu kurzu" width="482">
-        </div>
-        <div class="mdc-layout-grid__cell">
-          <img src="/images/galerie/foto-7.jpg" alt="Fotografie z průběhu kurzu" width="482">
-        </div>
-        <div class="mdc-layout-grid__cell">
-          <img src="/images/galerie/foto-8.jpg" alt="Fotografie z průběhu kurzu" width="482">
-        </div>
-        <div class="mdc-layout-grid__cell">
-          <img src="/images/galerie/foto-9.jpg" alt="Fotografie z průběhu kurzu" width="482">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+          <img src="/images/galerie/foto-6.png" alt="Fotografie z průběhu kurzu">
         </div>
       </div>
     </div>
@@ -277,23 +264,23 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
           <h2>Cena celého kurzu</h2>
         </div>
-        <div class="price_table mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
+        <div class="price_table mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
           <div class="table_head">
-          <h3>Cena zahrnuje</h3>
+            <h3>Cena zahrnuje</h3>
           </div>
           <div class="table_body">
-          <p>4 lekce</p>
-          <p>jedna lekce = 90 min</p>
-          <p>kapacita = 10 dětí</p>
-          <a href="#kontakt" class="button">MÁM ZÁJEM O KURZ</a>
+            <p>4 lekce</p>
+            <p>jedna lekce = 90 min</p>
+            <p>kapacita = 10 dětí</p>
+            <a href="#kontakt" class="button">MÁM ZÁJEM O KURZ</a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="reference" class="opinions">
-    <div class="mdc-layout-grid wrapper">
+  <section id="reference" class="review">
+    <div class="mdc-layout-grid review-wrapper wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Co říkají rodiče</h2>
