--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -264,7 +264,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
           <h2>Cena celého kurzu</h2>
         </div>
-        <div class="price_table mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
+        <div class="price_table mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
           <div class="table_head">
             <h3>Cena zahrnuje</h3>
           </div>
