prodeti.: Zakomentovaná sekce s videem

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -197,7 +197,7 @@
       </div>
     </div>
   </section>
-  <section id="ukazka" class="video">
+  <!---<section id="ukazka" class="video">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
@@ -205,7 +205,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id="form" class="form">
     <div class="mdc-layout-grid wrapper">
