prodeti. Mobile devices FORM section

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -218,12 +218,12 @@
                 action="https://topmonks.us12.list-manage.com/subscribe/post?u=3a1d5081e16aac38b8d212eac&amp;id=3dfcb7600a"
                 method="post" target="_blank">
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-7-desktop">
+              class="email mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-7-desktop">
               <label><span class="a11y--hidden">Zadejte váši e-mailovou adresu:</span> <input type="email" name="EMAIL"
                                                                                               placeholder="vas@email.cz"></label>
             </div>
             <div
-              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
+              class="email mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
               <button>ODESLAT</button>
             </div>
           </form>
