--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -51,8 +51,8 @@
           <p><b>HR aka Happy Makers</b><br>
             <span itemprop="name">Anna Kovácsová</span>:
             <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a><br>
-            <span itemprop="name">Eliška Monsportová</span>:
-            <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724&nbsp;390&nbsp;424</a><br>
+            <!-- <span itemprop="name">Eliška Monsportová</span>:
+            <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724&nbsp;390&nbsp;424</a><br>-->
             <a itemprop="email" href="mailto:happy&#64;topmonks.com">happy@​topmonks.com</a></p>
         </div>
 
@@ -194,4 +194,3 @@
   </div>
 
 {% endblock %}
-
