prodeti: BG img

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -239,22 +239,22 @@
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/galerie/foto-1.jpg" alt="Fotografie z průběhu kurzu">
+          <img src="/images/galerie/foto-1.jpg" alt="Fotografie z průběhu kurzu" width="400">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/galerie/foto-2.jpg" alt="Fotografie z průběhu kurzu">
+          <img src="/images/galerie/foto-2.jpg" alt="Fotografie z průběhu kurzu" width="400">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/galerie/foto-3.jpg" alt="Fotografie z průběhu kurzu">
+          <img src="/images/galerie/foto-3.jpg" alt="Fotografie z průběhu kurzu" width="400">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/galerie/foto-4.jpg" alt="Fotografie z průběhu kurzu">
+          <img src="/images/galerie/foto-4.jpg" alt="Fotografie z průběhu kurzu" width="400">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/galerie/foto-5.jpg" alt="Fotografie z průběhu kurzu">
+          <img src="/images/galerie/foto-5.jpg" alt="Fotografie z průběhu kurzu" width="400">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/galerie/foto-6.png" alt="Fotografie z průběhu kurzu">
+          <img src="/images/galerie/foto-6.png" alt="Fotografie z průběhu kurzu" width="400">
         </div>
       </div>
     </div>
