prodeti. úprava textu pomocí Texy

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -376,7 +376,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Kontakt</h2>
-          <p class="description">Přejete si objednat kurz do své firmy? Máte otázky? Napište nám.</p>
+          <p class="description">Přejete si objednat kurz do své firmy? Máte otázky? Napište&nbsp;nám.</p>
           <div style="margin: 0 auto; text-align: center">
             <a class="mail" href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a><br>
             <a href="tel:732364404">+420 732 364 404</a>
@@ -388,9 +388,9 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
             <h3>O nás</h3>
-            <p>V rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše děti. Na základě spokojenosti
-              dětí i rodičů
-              s již uspořádanými kurzy, jsme se rozhodli nabízet Programování pro děti přímo do firem.</p>
+            <p>V&nbsp;rámci TopMonks vzděláváme nejen sebe a IT komunitu, ale také naše
+              děti. Na základě spokojenosti dětí i&nbsp;rodičů s&nbsp;již uspořádanými
+              kurzy, jsme se rozhodli nabízet Programování pro děti přímo do&nbsp;firem.</p>
             <p>Využijte této možnosti například jako zajímavý benefit pro své zaměstnance.</p>
           </div>
           <div class="navigation mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
