--- a/www.topmonks.com/src/html/case-studies/adler/index.html
+++ b/www.topmonks.com/src/html/case-studies/adler/index.html
@@ -100,9 +100,9 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--time">
-        <h3>Solution saves up to 30 minutes a day</h3>
+        <h3>Solution saves employees' time</h3>
         <p>In close cooperation with the client, we created software that is not only nice but also user-friendly.
-          Besides, it saves up to 30 minutes of employees' time every day.</p>
+          Besides, it saves employees' time through the automation of several workflows.</p>
       </div>
     </div>
   </div>
