Caffe.Topmonks web 2

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -8,12 +8,28 @@
 {% block content %}
     {{ macros.pageHeader('TopMonks Caffè') }}
 
-
+<ul id="navigace">
+  <li>
+    <a href="#uvod">Úvod</a>
+  </li>
+  <li>
+    <a href="#courses">Co učíme</a>
+  </li>
+  <li>
+    <a href="#galerie">Fotogalerie</a>
+  </li>
+  <li>
+    <a href="#reference">Říkají o nás</a>
+  </li>
+  <li>
+    <a href="#kontakt">Kontakt</a>
+  </li>
+</ul>
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
                 <div class="intro">
-                    <p>Jedna z <a href="/company-values/">hlavních zásad</a> naší společnosti zní: <em>„Learn or die. Teach or die.“</em>                            Snažíme se jí dostát mimo jiné tím, že se každý první čtvrtek v měsíci scházíme a prezentujeme
+                   <em>„Learn or die. Teach or die.“</em>                            Snažíme se jí dostát mimo jiné tím, že se každý první čtvrtek v měsíci scházíme a prezentujeme
                         své znalosti a zkušenosti, diskutujeme o nich a dělíme se o ně.</p>
                 </div>
             </div>
