Topmonks.cz Sekce - costumers

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -199,7 +199,8 @@
         </g>
     </g>
 </svg></span></li>
-            <li><span class="sprite -img_logo_zonky"><svg width="164px" height="164px" viewBox="0 0 289 62" version="1.1"
+            <li><span class="sprite -img_logo_zonky"><svg width="164px" height="164px" viewBox="0 0 289 62"
+                                                          version="1.1"
                                                           xmlns="http://www.w3.org/2000/svg"
                                                           xmlns:xlink="http://www.w3.org/1999/xlink">
     <g id="Page-1">
@@ -312,10 +313,10 @@
         <blockquote>
           <p>TopMonks jsou vyjíměční především proto, že nám rozumí.</p>
         </blockquote>
-        <div class="name">
-          Jan Sechovec<br>
-          Universal Digital Punker
-        </div>
+        <figure class="name">
+          <img class="tm-testimonial__picture" src="/images/hp/sechovec.jpg" alt="[foto] Jan Sechovec">
+          <figcaption>Jan Sechovec<br>Universal Digital Punker</figcaption>
+        </figure>
       </div>
     </div>
   </div>
